syntax = "proto3";

package api;

option go_package = "api";

//任何一个实现了这个接口的对象，都可以作为Executor实例
service Executor{
    //同步检查心跳
    rpc HeartBeat(HeartBeatRequest) returns (HeartBeatResponse);

    //异步执行任务
    rpc RunJob(stream RunJobRequest) returns (stream RunJobResponse);
}

message HeartBeatRequest{

}

message HeartBeatResponse{
    HealthStatus healthStatus = 1;
}

message HealthStatus{
    float workload = 1;
}

message RunJobRequest{
    uint32 onFireLogID = 1;
    Job job = 2;
}

message RunJobResponse{
    uint32 onFireLogID = 1;
    JobResult result = 3;
}

message Job{
    string glueType = 1;
    map<string, string> source = 2;
    map<string, string> param = 3;
    int64 executorExecuteTimeoutMs = 4;
}

message JobResult{
    bool ok = 1;
    string err = 2;
    string result = 3;
}

